@@ -22,7 +22,7 @@ public class AbstractDilutionsCanvas extends PhetPCanvas {
 
     private static final Dimension2D STAGE_SIZE = new PDimension( 1008, 679 );
     private static final Color CANVAS_COLOR = Color.WHITE;
-    private static final boolean SHOW_STAGE_BOUNDS = PhetApplication.getInstance().getSimInfo().hasCommandLineArg( "showStageBounds" );
+    private static final boolean SHOW_STAGE_BOUNDS = PhetApplication.getInstance().getSimInfo().hasCommandLineArg( "-showStageBounds" );
 
     private final PNode rootNode;
 
